Fix google scholar url

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Domain Scientist, Earth Data Science at the Renaissance Computing Institute (RENCI), The University of North Carolina"
   location         : "Chapel Hill, NC"
   employer         : 
-  googlescholar    : "https://scholar.google.nl/citations?hl=en&user=moojvvsAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=moojvvsAAAAJ"
   email            : 
   uri              : 
   bitbucket        :
