--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Domain Scientist, Earth Data Science at the Renaissance Computing Institute (RENCI), The University of North Carolina"
   location         : "Chapel Hill, NC"
   employer         : 
-  googlescholar    : "moojvvsAAAAJ"
+  googlescholar    : "wclenhardt"
   email            : 
   uri              : 
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         :
+  linkedin         : "wclenhardt"
   orcid            : "http://orcid.org/0000-0001-9677-784X"
   pinterest        :
   soundcloud       :
